README title line now shows up.

--- a/template/README.md.mustache
+++ b/template/README.md.mustache
@@ -1,5 +1,5 @@
 {{{script_name}}} ({{{project_name}}})
-{{{header_line}}}
+{{! Three equals for " ()" }}==={{{readme_title_line}}}
 
 This [project](http://github.com/)...
 
