Used mustache callable to render dynamic-length title line.

--- a/template/default/mustache/README.md.mustache
+++ b/template/default/mustache/README.md.mustache
@@ -1,5 +1,6 @@
-{{{script_name}}} ({{{project_name}}})
-{{! Three equals for " ()" }}==={{{readme_title_line}}}
+{{#title}}
+  {{{script_name}}} ({{{project_name}}})
+{{/title}}
 
 This [project](http://github.com/)...
 
