Added license to README.

--- a/template/default/mustache/README.md.mustache
+++ b/template/default/mustache/README.md.mustache
@@ -33,7 +33,5 @@ Comments and suggestions are welcome.
 Copyright and License
 ---------------------
 
-Copyright (C) {{{current_year}}} {{{author_name}}}.  All rights reserved.
-
-TODO: add license.
+{{copyright_and_license}}
 
