Added template for Python header (which contains a lambda instead a section).

--- a/template/default/mustache/README.md.mustache
+++ b/template/default/mustache/README.md.mustache
@@ -33,5 +33,5 @@ Comments and suggestions are welcome.
 Copyright and License
 ---------------------
 
-{{copyright_and_license}}
+{{{copyright_and_license}}}
 
