Removed newline after title line in README template.

--- a/project_types/default/project/README.md.mustache
+++ b/project_types/default/project/README.md.mustache
@@ -1,6 +1,5 @@
 {{#title}}
-  {{{script_name}}} ({{{project_name}}})
-{{/title}}
+  {{{script_name}}} ({{{project_name}}}){{/title}}
 
 This [project](http://github.com/)...
 
