Default project now runs after being molted.

--- a/project_types/default/project/my_script.mustache
+++ b/project_types/default/project/my_script.mustache
@@ -12,7 +12,7 @@ See the project's README for details.
 
 import sys
 
-import molt_lib.main
+import pylib.main
 
 
 def main(sys_argv):
@@ -20,7 +20,7 @@ def main(sys_argv):
     Run the main script, and return the exit status.
 
     """
-    return molt_lib.main.main(sys_argv)
+    return pylib.main.main(sys_argv)
 
 
 if __name__ == "__main__":
